# bazel-playground

./: .bazelrc  .bazelversion  .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md
.buildbuddy/: workspace_status.sh
.github/: dependabot.yml  renovate-global.json
.github/workflows/: build_and_test.yml  renovate.yml
build-helper/: BUILD  banned.h
cpp-tutorial/stage1/main/: hello-world.cc
cpp-tutorial/stage2/main/: BUILD  hello-greet.cc
cpp-tutorial/stage3/: .bazelrc  BUILD.bazel  MODULE.bazel
cpp-tutorial/stage3/lib/: BUILD  hello-time.cc
cpp-tutorial/stage3/macros/: macros.bzl
cpp-tutorial/stage3/main/: BUILD  hello-test.cc  hello-world.cc
ios/: BUILD  bazeltestprofile.mobileprovision
lib/: hello-time.cc  hello-time.h
macros/: BUILD  android_build_config.bzl  android_mobile_binary.bzl  android_mobile_test.bzl  android_utils.bzl  collect_resources.bzl  constants.bzl  eject_binary.bzl  eject_binary.sh.tpl  ios_mobile_binary.bzl  ios_mobile_test.bzl  mobile_binary.bzl  mobile_library.bzl  mobile_test.bzl  test_suite.bzl  test_utils.bzl  transitioned_rule.bzl  transitions.bzl  wasm_mobile_binary.bzl  wasm_test.bzl
macros/android-helpers/: BUILD.bazel  wrap.sh
macros/android-helpers/exerunner/: AndroidManifest.xml  BUILD.bazel
macros/android-helpers/exerunner/PathProvider/: BUILD.bazel
macros/android-helpers/exerunner/PathProvider/Source/: PathProvider.cpp  PathProvider.hpp  PathProviderInternal.hpp
macros/android-helpers/exerunner/cpp/: exports.map  native-lib.cpp
macros/android-helpers/exerunner/java/com/example/exerunner/: NativeRunner.java  RunActivity.java
macros/android-helpers/exerunner/res/layout/: activity_run.xml  progress_dialog.xml
macros/android-helpers/exerunner/res/values/: strings.xml
macros/android-helpers/lib/armeabi-v7a/: wrap.sh
macros/coverage/: BUILD.bazel  convert.py  convert_all.py  master_template.html  pyproject.toml  requirements_lock.txt  template.html
macros/flags/: BUILD  BUILD.bazel  android.bzl  apple.bzl  clang_flags.bzl  emscripten.bzl  flags.bzl  flatten.bzl  gcc_compatible_flags.bzl  ios.bzl  linux.bzl  macos.bzl
macros/flags/flatten/: BUILD  BUILD.bazel  concat.bzl  flat_config_groups.bzl  flatten.bzl  sanitize.bzl
macros/ios-helpers/: BUILD.bazel  BundleHolder.swift  BundlePathProvider.cpp  BundlePathProvider.hpp  Info.plist  IosBundlePathProvider.swift
macros/ios-test/: BUILD  GoogleTests.mm  bazeltestprofile.mobileprovision  ios_mobile_test.bzl
macros/ios-test/GoogleTestHost/: App.swift  BUILD  Info.plist
macros/ios-test/ios-device-runner/: ios_device_test_tunner.bzl  ios_xctest_device_runner.template.sh
macros/ios-test/swift-bridge/: BUILD  GoogleTestInvoker.cpp  GoogleTestInvoker.hpp  GoogleTestLoader.swift  module.modulemap
macros/wasm-helpers/: BUILD.bazel  HtmlShell.html  chrome.BUILD.bazel  chrome_repo.bzl  chrome_versions.bzl  wasmThreadLimit.cpp  worker-init.js
macros/wasm-helpers/posluznik-run/: BUILD.bazel  posluznik_run.bzl  posluznik_run.template.sh
main/: BUILD  hello-greet.cc  hello-greet.h  hello-test.cc  hello-world.cc
main/tests/: hello-test-default.cc  hello-test-fail.cc  hello-test-file.cc  hello-test-non-default.cc
opencv/: BUILD.bazel  cameraTest.cc  displayImage.cc  image-manipulation.cc  ubuntu-gtk-deps.BUILD.bazel
paths/: BUILD
paths/Include/Paths/: Paths.hpp
paths/Source/: Paths.cpp
test-data/subfolder/: hello.txt
test-support/android-test/GoogleTestLauncher/: AndroidTestManifest.xml  BUILD  BUILD.bazel
test-support/android-test/GoogleTestLauncher/cpp/: GoogleTestLauncher.cpp
test-support/android-test/GoogleTestLauncher/java/: GoogleTestLauncher.template.java  LaunchActivity.template.java
test-support/android-test/GoogleTestLauncher/java/com/example/app/: GoogleTestLauncher.java
test-support/android-test/GoogleTestLauncher/java/com/example/testrunner/: LaunchActivity.java
test-support/android-test/GoogleTestLauncher/java/com/microblink/testrunner/: GoogleTestLauncher.java
test-support/android-test/GoogleTestLauncher/res/layout/: activity_launch.xml
test-support/android-test/GoogleTestLauncher/res/values/: strings.xml
test-support/android-test/TestHost/app/src/androidTest/: AndroidTestManifest.xml  BUILD
test-support/android-test/TestHost/app/src/androidTest/java/com/example/app/: ExampleInstrumentedTest.java
test-support/android-test/TestHost/app/src/main/: AndroidManifest.xml  BUILD
test-support/android-test/TestHost/app/src/main/cpp/: native-lib.cpp
test-support/android-test/TestHost/app/src/main/java/com/example/app/: MainActivity.java
test-support/android-test/TestHost/app/src/main/res/layout/: activity_main.xml
test-support/android-test/android_instrumentation_test/: BUILD.bazel  android_emulator_instrumentation_test.bzl  android_emulator_instrumentation_test.template.sh  android_instrumentation_test.bzl  android_instrumentation_test.template.sh
test-support/ios-test/: BUILD.bazel
test-support/ios-test/GoogleTestHost/: BUILD  BUILD.bazel
test-support/ios-test/swift-bridge/: BUILD  BUILD.bazel  GoogleTestInvoker.cpp  GoogleTestInvoker.hpp  GoogleTestLoader.swift  IosBundlePathProvider.swift
test-support/paths/: BUILD  BUILD.bazel
test-support/paths/Include/: Paths.h
test-support/paths/Include/TestPaths/: TestPaths.hpp
test-support/paths/Source/: Paths.cpp  TestPaths.cpp
test-support/wasm-test/posluznik-test/: BUILD  posluznik_test.bzl  posluznik_test.template.sh
toolchain/: BUILD  cc_toolchain_config.bzl
tools/: BUILD  BUILD.bazel  bazel  preset.bazelrc
tools/emsdk-cache-builder/: .gitignore  BUILD.bazel  MODULE.bazel  README.md  generate-emsdk-cache.sh
xcode/: BUILD.bazel  generate_ios_targets_bzl.sh  ios-targets.bzl
