load("//macros:test_suite.bzl", "define_subpackage_test_suites")

define_subpackage_test_suites(
    name = "all-test-suites",
    subpackages = [
        "main",
        "opencv",
    ],
)

filegroup(
    name = "binaries",
    srcs = [
        "//main:hello-world",
        "//opencv:displayImage",
        "//opencv:cameraTest",
    ],
)

alias(
    name = "doom",
    actual = "@rules_doom//examples/launch:freedoom2",
)
