module(name = "playground")

# Bazel rules begin

# Note: This needs to be before rules_cc in order to correctly configure the C++ toolchain.
# See here why: https://www.smileykeith.com/2025/09/21/understanding-apple-debug-info/
bazel_dep(name = "apple_support", version = "2.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_build_error", version = "0.9.0")
bazel_dep(name = "rules_license", version = "1.0.0")

# Bazel rules end

# Apple rules begin

bazel_dep(name = "rules_apple", version = "4.3.3")
bazel_dep(name = "rules_swift", version = "3.4.1")
bazel_dep(name = "rules_xcodeproj", version = "3.5.1")

# Apple rules end

# LLVM rules begin
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "21.1.2",
)

use_repo(llvm, "llvm_toolchain")
# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts

register_toolchains("@llvm_toolchain//:all")
# LLVM rules end

# Python rules begin

bazel_dep(name = "rules_python", version = "1.7.0")

PYTHON_VERSION = "3.14"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = PYTHON_VERSION)
python.toolchain(python_version = PYTHON_VERSION)

# https://rules-python.readthedocs.io/en/latest/api/rules_python/python/uv/uv.html
uv = use_extension("@rules_python//python/uv:uv.bzl", "uv", dev_dependency = True)
uv.configure()

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "coverage_pip_deps",
    python_version = PYTHON_VERSION,
    requirements_lock = "//macros/coverage:requirements_lock.txt",
)
use_repo(pip, "coverage_pip_deps")

# Python rules end

# Android rules begin
bazel_dep(name = "rules_android_ndk", version = "0.1.3")

# Patch to allow downloading NDK and additionally define some custom build flags
single_version_override(
    module_name = "rules_android_ndk",
    patch_strip = 1,
    patches = [
        "//3rdparty:rules_android_ndk.patch",
    ],
)

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
android_ndk_repository_extension.configure(
    api_level = 21,
    version = "r29",
)
use_repo(android_ndk_repository_extension, "androidndk")

# Don't register the Android toolchain here, as it will trigger NDK download even when not needed (e.g. on Linux arm64)
# Instead, register it with --extra_toolchains=@androidndk//:all from commandline
# register_toolchains("@androidndk//:all")

bazel_dep(name = "rules_java", version = "8.15.2")  # Note: Needs to be pinned to v8.15.2 due to issue: https://github.com/bazelbuild/rules_android/issues/410
bazel_dep(name = "rules_android", version = "0.6.6")

remote_android_extensions = use_extension("@rules_android//bzlmod_extensions:android_extensions.bzl", "remote_android_tools_extensions")
use_repo(remote_android_extensions, "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "android_test_deps",
    artifacts = [
        "junit:junit:4.13.2",
        "androidx.test:rules:1.7.0",
        "androidx.test.ext:junit:1.3.0",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "android_test_deps")

# Android rules end

# Emscripten rules begin
bazel_dep(name = "emsdk", version = "4.0.16")
single_version_override(
    module_name = "emsdk",
    patch_strip = 1,
    patches = [
        "//3rdparty:emsdk.patch",
    ],
)

emscripten_cache = use_extension(
    "@emsdk//:emscripten_cache.bzl",
    "emscripten_cache",
)

# NOTE: See tools/emsdk-cache-builder/README.md for instructions on how to build emsdk cache tarball and upload it to the artifactory
# emscripten_cache.prebuilt_cache(
#     http_archive_url = "https://artifactory.yourserver.com:443/artifactory/bazel-prebuilt-packages/emsdk-caches/emsdk-cache-4.0.16.tar.gz",
#     sha256 = "3e88abcbd22bac7b05af416c8f1859d12572c8e9356db604a2768fcfda863da8",
#     strip_prefix = "emsdk-cache",
# )

bazel_dep(name = "posluznik", version = "1.3.5")
git_override(
    module_name = "posluznik",
    commit = "41af6ef76a60d6adb8e8dd0066f2ac8386badc56",
    remote = "https://github.com/microblink/posluznik",
)


# Chrome to run WASM tests on

chrome_extension = use_extension("//macros/wasm-helpers:chrome_repo.bzl", "chrome_extension")
chrome_extension.install_chrome(
    name = "chrome",
    version = "141",
)
use_repo(chrome_extension, "chrome")

# tool for validation of WASM binaries
bazel_dep(name = "wabt", version = "1.0.37")

# Emscripten rules end

# DEV DEPENDENCIES


bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
single_version_override(
    module_name = "googletest",
    patch_strip = 1,
    patches = [
        "//3rdparty:googletest.patch",
    ],
)
