module(name = "playground")

# Bazel rules begin

# Note: This needs to be before rules_cc in order to correctly configure the C++ toolchain.
# See here why: https://www.smileykeith.com/2025/09/21/understanding-apple-debug-info/
bazel_dep(name = "apple_support", version = "2.6.1")
bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_build_error", version = "0.11.0")
bazel_dep(name = "rules_license", version = "1.0.0")

# Bazel rules end

# Host platform detection
host_platform = use_extension("//platforms:extension.bzl", "host_platform")
use_repo(host_platform, "host_platform")

# Apple rules begin

bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "rules_xcodeproj", version = "4.1.0")

# Apple rules end

# LLVM rules begin

# TODO: Much more convenient than toolchains_llvm, but:
#  - no support for sanitizers yet (on roadmap; setting --@toolchains_llvm_bootstrapped//config:ubsan=True, does not help)
#  - no support for choosing LLVM version yet
bazel_dep(name = "llvm", version = "0.8.11")

# llvm_source = use_extension("@llvm//extensions:llvm_source.bzl", "llvm_source")
# requires 22.1.0 at minimum (fails to build 21.1.8)
# llvm_source.version(llvm_version = "22.1.0")

toolchain = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")

toolchain.exec(arch = "x86_64", os = "linux")
toolchain.exec(arch = "aarch64", os = "linux")
toolchain.target(arch = "x86_64", os = "linux")
toolchain.target(arch = "aarch64", os = "linux")


use_repo(toolchain, "llvm_toolchains")
register_toolchains("@llvm_toolchains//:all")

# LLVM rules end
# Python rules begin

bazel_dep(name = "rules_python", version = "2.1.0")

PYTHON_VERSION = "3.14"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = PYTHON_VERSION)
python.toolchain(python_version = PYTHON_VERSION)

# https://rules-python.readthedocs.io/en/latest/api/rules_python/python/uv/uv.html
uv = use_extension("@rules_python//python/uv:uv.bzl", "uv", dev_dependency = True)
uv.configure()

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "coverage_pip_deps",
    python_version = PYTHON_VERSION,
    requirements_lock = "//macros/coverage:requirements_lock.txt",
)
use_repo(pip, "coverage_pip_deps")

# Python rules end

# Android rules begin
bazel_dep(name = "hermetic_android_toolchains", version = "0.2.0")
bazel_dep(name = "rules_android", version = "0.7.3")
bazel_dep(name = "rules_android_ndk", version = "0.1.5")

android = use_extension("@hermetic_android_toolchains//:extensions.bzl", "android", dev_dependency = True)
android.sdk(
    build_tools_version = "37.0.0",
    version = "37.0",
)
android.ndk(
    version = "r29",
    api_level = 24,
)
use_repo(android, "androidsdk", "androidndk")

# Make @rules_android's @androidsdk labels resolve to the hermetic SDK.
rules_android_sdk = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
override_repo(rules_android_sdk, "androidsdk")

# Make @rules_android_ndk's @androidndk labels resolve to the hermetic SDK.
rules_android_ndk = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
override_repo(rules_android_ndk, "androidndk")

register_toolchains("@androidsdk//:all", "@androidndk//:all", dev_dependency = True)

bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "protobuf", version = "35.1")
bazel_dep(name = "rules_jvm_external", version = "7.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "android_test_deps",
    artifacts = [
        "junit:junit:4.13.2",
        "androidx.test:rules:1.7.0",
        "androidx.test.ext:junit:1.3.0",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "android_test_deps")

# override protobuf for rules_android
maven.install(
    name = "android_ide_common_30_1_3",
    artifacts = [
        "com.google.protobuf:protobuf-java:4.35.1",
        "com.google.protobuf:protobuf-java-util:4.35.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_starlark_android_rules = True,
    known_contributing_modules = ["rules_android"]
)
maven.install(
    name = "rules_android_maven",
    artifacts = [
        "com.google.protobuf:protobuf-java:4.35.1",
        "com.google.protobuf:protobuf-java-util:4.35.1",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_starlark_android_rules = True,
    known_contributing_modules = ["rules_android"]
)
# Android rules end

# Emscripten rules begin
bazel_dep(name = "emsdk", version = "6.0.1")

emscripten_deps = use_extension("@emsdk//:emscripten_deps.bzl", "emscripten_deps")
emscripten_deps.config(
    version = "6.0.1", # Must match the cache
)

emscripten_cache = use_extension(
    "@emsdk//:emscripten_cache.bzl",
    "emscripten_cache",
)

# NOTE: See tools/emsdk-cache-builder/README.md for instructions on how to build emsdk cache tarball and upload it to the artifactory
emscripten_cache.prebuilt_cache(
    http_archive_url = "https://github.com/DoDoENT/bazel-playground/releases/download/emsdk-cache/emsdk-cache-6.0.1.tar.gz",
    sha256 = "7975fa18da9868f08cc2b8ec9b47e9a65aec060982ed3015a133809abec335e7",
    strip_prefix = "emsdk-cache",
)

bazel_dep(name = "posluznik", version = "1.3.6")
git_override(
    module_name = "posluznik",
    commit = "b6fff95f36b1656d7d4e59bafdc70eda8297f017",
    remote = "https://github.com/microblink/posluznik",
)


# Chrome to run WASM tests on

chrome_extension = use_extension("//macros/wasm-helpers:chrome_repo.bzl", "chrome_extension")
chrome_extension.install_chrome(
    name = "chrome",
    version = "150",
)
use_repo(chrome_extension, "chrome")

# tool for validation of WASM binaries
bazel_dep(name = "wabt", version = "1.0.37")

# Emscripten rules end

# DEV DEPENDENCIES


bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
single_version_override(
    module_name = "googletest",
    patch_strip = 1,
    patches = [
        "//3rdparty:googletest.patch",
    ],
)

bazel_dep(name = "opencv", version = "5.0.0.bcr.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "ubuntu-gtk-deps",
    sha256 = "84656a6df544ecef62169cfe3ab6e41bb4346a62d3ba2a045dc5a0a2ecea94a3",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_amd64_sysroot.tar.xz"],
    build_file = "//opencv:ubuntu-gtk-deps.BUILD.bazel",
)

# details: https://github.com/finn-ball/rules_doom
bazel_dep(name = "rules_doom", version = "0.1.0", dev_dependency = True)

