load("//macros:mobile_binary.bzl", "mobile_binary" )
load("//macros:mobile_test.bzl", "mobile_test" )
load("//macros:test_suite.bzl", "define_test_suites" )

define_test_suites(
    name = "test-suites",
)

mobile_test(
    name = "image-manipulation-test",
    srcs = [
        "image-manipulation.cc",
    ],
    data = [
        "test-data/image.png",
        "test-data/expected-result.png",
    ],
    deps = [
        "@opencv//:imgcodecs",
    ],
    android_deploy_resources = True,
    wasm_basic = False,  # OpenCV 5.0.0 fails to build without WASM SIMD
)

mobile_binary(
    name = "displayImage",
    srcs = ["displayImage.cc"],
    data = [
        "test-data/image.png",
    ],
    deps = [
        "@opencv//:highgui",
    ],
    host_only = True,
    visibility = ["//visibility:public"],
)

mobile_binary(
    name = "cameraTest",
    srcs = [
        "cameraTest.cc",
    ],
    deps = [
        "@opencv//:highgui",
    ],
    host_only = True,
    visibility = ["//visibility:public"],
)
