filegroup(
    name = "wasm_html_shell_template",
    srcs = [
        "HtmlShell.html",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wasm_thread_limit_helper",
    srcs = [
        "wasmThreadLimit.cpp",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "wasm_worker_init",
    srcs = [
        "worker-init.js",
    ],
    visibility = ["//visibility:public"],
)
